--- a/src/app/tabs/tabs/tabs.component.scss
+++ b/src/app/tabs/tabs/tabs.component.scss
@@ -1,5 +1,4 @@
-
-
+@import '../../variable';
 ul {
   list-style-type: none;
   margin: 0;
@@ -53,7 +52,7 @@ a {
   justify-content: center;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: $mediaMaxWithTabsResponsive) {
   .tabs {
     display: none;
   }
