--- a/src/app/tabs/tabs/tabs.component.scss
+++ b/src/app/tabs/tabs/tabs.component.scss
@@ -1,4 +1,5 @@
-@import '../../variable';
+// FOR DEV @import '../../variable';
+@import '../../../../../../../src/app/variable';
 ul {
   list-style-type: none;
   margin: 0;
